--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,12 @@ body {
    
   }
 
+  .photo-and-name {
+      display: flex;
+      flex-direction: row;
+      gap: 10px;
+    }
+
   .testimonials img {
     border-radius: 50%;
     border: 3px solid hsl(0, 0%, 100%);
@@ -27,7 +33,7 @@ body {
 
   .testimonial1 {
     background-color: hsl(263, 55%, 52%);
-    padding: 30px;
+    padding: 10px;
     border-radius: 10px;
     color:hsl(0, 0%, 100%);
     height: 200px;
@@ -60,6 +66,10 @@ body {
     border-radius: 10px;
     color:hsl(0, 0%, 100%)
   }
+
+  p {
+    font-size: 13px;
+  }
 }
 
 @media (max-width: 600px) {
@@ -67,26 +77,33 @@ body {
       display: flex;
       flex-direction: column;
       gap: 20px;
-      padding: 20px;
+      padding: 10px;
     }
 
-    .testimonials img {
-    border-radius: 50%;
-    border: 3px solid hsl(0, 0%, 100%);
-  }
+    .photo-and-name {
+      display: flex;
+      flex-direction: column;
+      
+      gap: 10px;
+    }
 
-  .testimonial1 {
-    background-color: hsl(263, 55%, 52%);
-    padding: 30px;
-    border-radius: 10px;
-    color:hsl(0, 0%, 100%);
-    width: 300px;
-    height: auto;
-  }
+      .testimonials img {
+      border-radius: 50%;
+      border: 3px solid hsl(0, 0%, 100%);
+    }
+
+    .testimonial1 {
+      background-color: hsl(263, 55%, 52%);
+      padding: 20px;
+      border-radius: 10px;
+      color:hsl(0, 0%, 100%);
+      width: 200px;
+      height: auto;
+    }
 
   .testimonial2{
     background-color: hsl(217, 19%, 35%);
-    padding: 30px;
+    padding: 20px;
     border-radius: 10px;
     color:hsl(0, 0%, 100%);
     width: 300px;
@@ -95,7 +112,7 @@ body {
 
   .testimonial3{
     background-color: hsl(0, 0%, 100%);
-    padding: 30px;
+    padding: 20px;
     border-radius: 10px;
     height: 100%;
     width: 300px;
@@ -104,7 +121,7 @@ body {
 
   .testimonial4{
     background-color: hsl(0, 0%, 81%);
-    padding: 30px;
+    padding: 20px;
     border-radius: 10px;
     width: 300px;
     height: auto;
@@ -112,10 +129,14 @@ body {
 
   .testimonial5{
     background-color: hsl(0, 0%, 7%);
-    padding: 30px;
+    padding: 20px;
     border-radius: 10px;
     color:hsl(0, 0%, 100%);
     width: 300px;
     height: auto;
+  }
+
+  p {
+    font-size: 13px;
   }
 }
