--- a/styles.css
+++ b/styles.css
@@ -60,13 +60,15 @@ body {
     color:hsl(0, 0%, 100%);
     height: 200px;
     width: 500px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   }
 
   .testimonial2{
     background-color: hsl(217, 19%, 35%);
     padding: 30px;
     border-radius: 10px;
-    color:hsl(0, 0%, 100%)
+    color:hsl(0, 0%, 100%);
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   }
 
   .testimonial3{
@@ -74,19 +76,22 @@ body {
     padding: 30px;
     border-radius: 10px;
     height: 100%;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   }
 
   .testimonial4{
     background-color: hsl(0, 0%, 81%);
     padding: 30px;
     border-radius: 10px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   }
 
   .testimonial5{
     background-color: hsl(0, 0%, 7%);
     padding: 30px;
     border-radius: 10px;
-    color:hsl(0, 0%, 100%)
+    color:hsl(0, 0%, 100%);
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   }
 
   p {
@@ -140,8 +145,9 @@ body {
       padding: 20px;
       border-radius: 10px;
       color:hsl(0, 0%, 100%);
-      width: 300px;
+      width: 280px;
       height: auto;
+      box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     }
 
   .testimonial2{
@@ -149,8 +155,9 @@ body {
     padding: 20px;
     border-radius: 10px;
     color:hsl(0, 0%, 100%);
-    width: 300px;
+    width: 280px;
     height: auto;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   }
 
   .testimonial3{
@@ -158,16 +165,18 @@ body {
     padding: 20px;
     border-radius: 10px;
     height: 100%;
-    width: 300px;
+    width: 280px;
     height: auto;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   }
 
   .testimonial4{
     background-color: hsl(0, 0%, 81%);
     padding: 20px;
     border-radius: 10px;
-    width: 300px;
+    width: 280px;
     height: auto;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   }
 
   .testimonial5{
@@ -175,11 +184,8 @@ body {
     padding: 20px;
     border-radius: 10px;
     color:hsl(0, 0%, 100%);
-    width: 300px;
+    width: 280px;
     height: auto;
-  }
-
-  p {
-    font-size: 13px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   }
 }
