--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ body {
   }
 
   .testimonials img {
+    display: block;
     border-radius: 50%;
     border: 2px solid hsl(0, 0%, 100%);
     width: 30px;
@@ -55,7 +56,7 @@ body {
 
   .testimonial1 {
     background-color: hsl(263, 55%, 52%);
-    padding: 10px;
+    padding: 10px, 10px;
     border-radius: 10px;
     color:hsl(0, 0%, 100%);
     height: 200px;
@@ -103,6 +104,8 @@ body {
   .testimonials {
       display: flex;
       flex-direction: column;
+      justify-content: center;
+      align-items: center;
       gap: 20px;
       padding: 10px;
   }
