--- a/styles.css
+++ b/styles.css
@@ -49,14 +49,14 @@ body {
   .testimonials img {
     display: block;
     border-radius: 50%;
-    border: 2px solid hsl(0, 0%, 100%);
+    border: 2px solid hsl(264, 82%, 80%);
     width: 30px;
     height: 30px;
   }
 
   .testimonial1 {
     background-color: hsl(263, 55%, 52%);
-    padding: 10px, 10px;
+    padding: 30px;
     border-radius: 10px;
     color:hsl(0, 0%, 100%);
     height: 200px;
@@ -76,22 +76,24 @@ body {
     background-color: hsl(0, 0%, 100%);
     padding: 30px;
     border-radius: 10px;
+    color: hsl(224, 10%, 45%);
     height: 100%;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   }
 
   .testimonial4{
-    background-color: hsl(0, 0%, 81%);
+    background-color: hsl(0, 0%, 7%);
+    color:hsl(0, 0%, 100%);
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   }
 
   .testimonial5{
-    background-color: hsl(0, 0%, 7%);
+    background-color: hsl(0, 0%, 100%);
     padding: 30px;
     border-radius: 10px;
-    color:hsl(0, 0%, 100%);
+    color:hsl(224, 10%, 45%);
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   }
 
@@ -138,7 +140,7 @@ body {
 
   .testimonials img {
     border-radius: 50%;
-    border: 2px solid hsl(0, 0%, 100%);
+    border: 2px solid hsl(264, 82%, 80%);
     width: 30px;
     height: 30px;
   }
@@ -167,6 +169,7 @@ body {
     background-color: hsl(0, 0%, 100%);
     padding: 20px;
     border-radius: 10px;
+    color: hsl(224, 10%, 45%);
     height: 100%;
     width: 280px;
     height: auto;
@@ -174,19 +177,20 @@ body {
   }
 
   .testimonial4{
-    background-color: hsl(0, 0%, 81%);
+    background-color: hsl(0, 0%, 7%);
     padding: 20px;
     border-radius: 10px;
+    color:hsl(0, 0%, 100%);
     width: 280px;
     height: auto;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   }
 
   .testimonial5{
-    background-color: hsl(0, 0%, 7%);
+    background-color: hsl(0, 0%, 100%);
     padding: 20px;
     border-radius: 10px;
-    color:hsl(0, 0%, 100%);
+    color: hsl(224, 10%, 45%);
     width: 280px;
     height: auto;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
