--- a/styles.css
+++ b/styles.css
@@ -14,10 +14,10 @@ body {
 
   .testimonials {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 20px;
     padding: 40px;
-   
+    
   }
 
   .photo-and-name {
@@ -55,51 +55,56 @@ body {
   }
 
   .testimonial1 {
+    grid-column: 1 / 3;
     background-color: hsl(263, 55%, 52%);
     padding: 30px;
     border-radius: 10px;
     color:hsl(0, 0%, 100%);
-    height: 200px;
-    width: 500px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    
   }
 
   .testimonial2{
+    grid-column: 3 / 4;
     background-color: hsl(217, 19%, 35%);
     padding: 30px;
     border-radius: 10px;
     color:hsl(0, 0%, 100%);
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    
   }
 
   .testimonial3{
+    grid-column: 1 / 2;
     background-color: hsl(0, 0%, 100%);
     padding: 30px;
     border-radius: 10px;
     color: hsl(224, 10%, 45%);
-    height: 100%;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    
   }
 
   .testimonial4{
+    grid-column: 2 / 4;
     background-color: hsl(0, 0%, 7%);
     color:hsl(0, 0%, 100%);
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    
   }
 
   .testimonial5{
+    grid-column: 4 / 5;
+    grid-row: 1 / 3;
     background-color: hsl(0, 0%, 100%);
     padding: 30px;
     border-radius: 10px;
     color:hsl(224, 10%, 45%);
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    
   }
 
-  p {
-    font-size: 13px;
-  }
 }
 
 @media (max-width: 600px) {
